PRESIDECMS-82 Fixing spacing on icons in timeline headers

--- a/system/assets/css/admin/ace/ace-for-preside.less
+++ b/system/assets/css/admin/ace/ace-for-preside.less
@@ -14292,6 +14292,9 @@ ul.attachment-list > li {
 .timeline-item .transparent .widget-header > .widget-title {
   margin-left: 8px;
 }
+.timeline-item .transparent .widget-header > .widget-title > .fa {
+  margin-right: 0;
+}
 .timeline-item:nth-child(even) .widget-box {
   background-color: #F3F3F3;
   color: #616161;
