--- a/system/assets/css/admin/ace/page.timeline.less
+++ b/system/assets/css/admin/ace/page.timeline.less
@@ -51,6 +51,10 @@
 
 		> .widget-title {
 			margin-left: 8px;
+
+			> .fa {
+				margin-right : 0;
+			}
 		}
 	}
  }
