--- a/system/assets/css/admin/core/core.less.css
+++ b/system/assets/css/admin/core/core.less.css
@@ -23094,6 +23094,9 @@ td.presidecms .visible-print {
 .presidecms .timeline-item .transparent .widget-header > .widget-title {
   margin-left: 8px;
 }
+.presidecms .timeline-item .transparent .widget-header > .widget-title > .fa {
+  margin-right: 0;
+}
 .presidecms .timeline-item:nth-child(even) .widget-box {
   background-color: #F3F3F3;
   color: #616161;
